[package]
name = "polypaging"
version = "1.0.1"
edition = "2021"
description = "A Rust crate designed to make sending Poly™ Multicast pages easy"
authors = ["Michael Englehorn"]
repository = "https://github.com/K0HAX/polypaging/"
license = "MIT"
categories = ["network-programming"]

[lib]
#crate-type = ["dylib"]

[dependencies]
ascii = "1.1.0"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive", "env", "unicode", "wrap_help"] }
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }

[profile.release]
strip = "symbols"

